# quad_ros

./: .gitignore  README.md
Utils/thrust/: thrust_curve.py
VINS-Fusion/config/N3_RealsenseD435/: n3_realsense_stereo_imu_config.yaml
deploy/cfg/: start_all.sh  start_all_rb5.sh
djiros/launch/: djiros.launch
djiros/src/djiros/: DjiRosSubscriber.cpp
driver/Onboard-SDK-ROS/dji_sdk/include/dji_sdk/: dji_sdk_node.h
driver/Onboard-SDK-ROS/dji_sdk/src/modules/: dji_sdk_node.cpp  dji_sdk_node_control.cpp  dji_sdk_node_services.cpp
driver/Onboard-SDK-ROS/dji_sdk_demo/src/: demo_flight_control.cpp
driver/djiros/src/djiros/: DjiRos.cpp  DjiRosPublisher.cpp  DjiRosSubscriber.cpp
driver/nlink_parser/: CMakeLists.txt
driver/nlink_parser/src/utils/protocol_extracter/: nprotocol_extracter.cpp
driver/px4_driver/launch/: px4_config.yaml
driver/realsense-ros/realsense2_camera/launch/: rs_launch.py
driver/serial/serial-master/: CMakeLists.txt  README.md
driver/tello_driver/: CMakeLists.txt  README.md
driver/tello_driver/launch/: tello_node.launch
driver/tello_driver/nodes/: tello_driver_node
driver/usb_camera/camera_info/: head_camera.yaml
driver/usb_camera/launch/: usb_cam.launch
happymoon_quad_control/: CMakeLists.txt  README.md  package.xml
happymoon_quad_control/include/: geometry_eigen_conversions.h  happymoon_control.h  math_common.h
happymoon_quad_control/launch/: default.yaml  happymoon_control.launch
happymoon_quad_control/src/: control_data_arbiter.cpp  geometry_eigen_conversions.cpp  happymoon_control.cpp  happymoon_quad_control_node.cpp  math_common.cpp
navigation/happymoon_quad_control/: CMakeLists.txt  package.xml
navigation/happymoon_quad_control/include/: control_data_arbiter.h  geometry_eigen_conversions.h  happymoon_control.h
navigation/happymoon_quad_control/launch/: default.yaml  happymoon_control.launch
navigation/happymoon_quad_control/src/: geometry_eigen_conversions.cpp  happymoon_control.cpp  happymoon_quad_control_node.cpp
navigation/monocular_pose_estimator/monocular_pose_estimator/: CMakeLists.txt  package.xml
navigation/monocular_pose_estimator/monocular_pose_estimator/include/monocular_pose_estimator/: monocular_pose_estimator.h
navigation/monocular_pose_estimator/monocular_pose_estimator/launch/: demo.launch
navigation/monocular_pose_estimator/monocular_pose_estimator/marker_positions/: demo.yaml  demo_marker_positions.yaml
navigation/monocular_pose_estimator/monocular_pose_estimator/src/: monocular_pose_estimator.cpp  node.cpp
navigation/monocular_pose_estimator/monocular_pose_estimator_lib/: CMakeLists.txt  package.xml
navigation/monocular_pose_estimator/monocular_pose_estimator_lib/include/monocular_pose_estimator_lib/: combinations.h  datatypes.h  led_detector.h  p3p.h  pose_estimator.h  visualization.h
navigation/realsense-ros/realsense2_camera/launch/: realsense_camera.launch
navigation/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp
navigation/vins_fusion/camera_models/: CMakeLists.txt
navigation/vins_fusion/camera_models/src/: intrinsic_calib.cc
navigation/vins_fusion/camera_models/src/calib/: CameraCalibration.cc
navigation/vins_fusion/camera_models/src/chessboard/: Chessboard.cc
navigation/vins_fusion/config/: vins_rviz_config.rviz
navigation/vins_fusion/config/N3_RealsenseD435/: n3_realsense_stereo_imu_config.yaml  right.yaml
navigation/vins_fusion/config/euroc/: euroc_config.yaml
navigation/vins_fusion/config/px4_realsense/: euroc_stereo_imu_config.yaml  px4_realsense_config.yaml
navigation/vins_fusion/vins/: CMakeLists.txt
navigation/vins_fusion/vins/config/PX4_realsenseD435i/: left.yaml  px4_realsense_stereo_imu_config.yaml
navigation/vins_fusion/vins/src/estimator/: estimator.cpp
navigation/vins_fusion/vins/src/factor/: marginalization_factor.cpp  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp
navigation/vins_fusion/vins_estimator/: CMakeLists.txt
navigation/vins_fusion/vins_estimator/config/: vins_rviz_config.rviz
navigation/vins_fusion/vins_estimator/launch/: euroc.launch  px4_realsense.launch  vins_fusion.launch  vins_fusion_sim.launch  vins_rviz.launch  vins_rviz_config.rviz
navigation/vins_fusion/vins_estimator/launch/N3_RealsenseD435/: n3_realsense_stereo_imu_config.yaml  right.yaml
navigation/vins_fusion/vins_estimator/launch/PX4_realsenseD435i/: left.yaml  px4_realsense_stereo_imu_config.yaml  right.yaml
navigation/vins_fusion/vins_estimator/launch/sim_d435/: right.yaml  sim_stereo_imu_config.yaml
navigation/vins_fusion/vins_estimator/src/: rosNodeTest.cpp
navigation/vins_fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
navigation/vins_fusion/visual_front/: feature_match.py  feature_match_node.py
navigation/vins_fusion/visual_front/utils/: feature_process.py  parameter.py  superglue.py
